Translate from Scala 2 to Java 1.8.